[package]
name = "bevy-web3d"
version = "0.1.0"
edition = "2021"
default-run = "bevy-web3d"

[dependencies]
bevy = "0.15.1"
bevy_panorbit_camera = "0.22.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
